-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
cfd24d907 (dev), c2845cdfd (6.6)
tst_qmltest_datavis fails randomly in CI.
Test pass, but these is exit code -11 after "cleanupTestCase()", which causes the test to fail. This is reported as a crash to the test metrics.
For Gerrit Dashboard: QTBUG-114852 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
490674,6 | Fix flaky autotest | dev | qt/qtdatavis3d | Status: MERGED | +2 | 0 |
494185,2 | Fix flaky autotest | 6.6 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |