Fix flaky autotest

Fixes: QTBUG-114852
Change-Id: I5056fc228ea1ca4f040a17e6508ee2700884a788
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit cfd24d907993580b472a8c038cc2662f3087ab5a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>