tests/auto/qmltest/scatter3d/tst_basic.qml
@@ -86,8 +86,6 @@ Item {
             compare(empty.axisZ.type, AbstractAxis3D.AxisTypeValue)
             compare(empty.axisY.type, AbstractAxis3D.AxisTypeValue)
             waitForRendering(top)
-            empty.destroy()
-            waitForRendering(top)
         }
     }
 
@@ -99,8 +97,6 @@ Item {
             constructBasic()
             compare(basic.width, 150, "width")
             compare(basic.height, 150, "height")
-            waitForRendering(top)
-            basic.destroy()
             waitForRendering(top)
         }
     }
@@ -114,12 +110,12 @@ Item {
                 return;
 
             constructCommon()
+            if (common.shadowsSupported === false)
+                return;
+
             compare(common.selectionMode, AbstractGraph3D.SelectionItem, "selectionMode")
             compare(common.shadowQuality, AbstractGraph3D.ShadowQualityMedium, "shadowQuality")
-            if (common.shadowsSupported === true)
-                compare(common.msaaSamples, 4, "msaaSamples")
-            else
-                compare(common.msaaSamples, 0, "msaaSamples")
+            compare(common.msaaSamples, 4, "msaaSamples")
             compare(common.theme.type, Theme3D.ThemeQt, "theme")
             compare(common.renderingMode, AbstractGraph3D.RenderIndirect, "renderingMode")
             compare(common.measureFps, false, "measureFps")
@@ -140,17 +136,14 @@ Item {
         }
 
         function test_2_change_common() {
-            if (Qt.platform.os === "android")
+            if (Qt.platform.os === "android" || common.shadowsSupported === false)
                 return;
 
             common.selectionMode = AbstractGraph3D.SelectionNone
             common.shadowQuality = AbstractGraph3D.ShadowQualitySoftHigh
-            compare(common.shadowQuality, AbstractGraph3D.ShadowQualitySoftHigh, "shadowQuality")
             common.msaaSamples = 8
-            if (common.shadowsSupported === true)
-                compare(common.msaaSamples, 8, "msaaSamples")
-            else
-                compare(common.msaaSamples, 0, "msaaSamples")
+            compare(common.shadowQuality, AbstractGraph3D.ShadowQualitySoftHigh, "shadowQuality")
+            compare(common.msaaSamples, 8, "msaaSamples")
             common.theme.type = Theme3D.ThemeRetro
             common.renderingMode = AbstractGraph3D.RenderDirectToBackground_NoClear
             common.measureFps = true
@@ -183,41 +176,8 @@ Item {
             waitForRendering(top)
         }
 
-        function test_3_common_initialized() {
-            if (Qt.platform.os === "android")
-                return;
-
-            constructCommonInit()
-
-            compare(common_init.selectionMode, AbstractGraph3D.SelectionNone, "selectionMode")
-            if (common_init.shadowsSupported === true) {
-                tryCompare(common_init, "shadowQuality", AbstractGraph3D.ShadowQualityLow)
-                compare(common_init.msaaSamples, 2, "msaaSamples")
-            } else {
-                tryCompare(common_init, "shadowQuality", AbstractGraph3D.ShadowQualityNone)
-                compare(common_init.msaaSamples, 0, "msaaSamples")
-            }
-            compare(common_init.theme.type, Theme3D.ThemeUserDefined, "theme")
-            compare(common_init.renderingMode, AbstractGraph3D.RenderIndirect, "renderingMode")
-            compare(common_init.measureFps, true, "measureFps")
-            compare(common_init.customItemList.length, 0, "customItemList")
-            compare(common_init.orthoProjection, false, "orthoProjection")
-            compare(common_init.aspectRatio, 3.0, "aspectRatio")
-            compare(common_init.optimizationHints, AbstractGraph3D.OptimizationStatic, "optimizationHints")
-            compare(common_init.polar, false, "polar")
-            compare(common_init.radialLabelOffset, 2, "radialLabelOffset")
-            compare(common_init.horizontalAspectRatio, 0.2, "horizontalAspectRatio")
-            compare(common_init.reflection, true, "reflection")
-            compare(common_init.reflectivity, 0.1, "reflectivity")
-            compare(common_init.locale, Qt.locale("UK"), "locale")
-            compare(common_init.margin, 0.2, "margin")
-            waitForRendering(top)
-            common_init.destroy();
-            waitForRendering(top)
-        }
-
-        function test_4_change_invalid_common() {
-            if (Qt.platform.os === "android")
+        function test_3_change_invalid_common() {
+            if (Qt.platform.os === "android" || common.shadowsSupported === false)
                 return;
 
             common.selectionMode = AbstractGraph3D.SelectionRow | AbstractGraph3D.SelectionColumn | AbstractGraph3D.SelectionSlice
@@ -236,6 +196,39 @@ Item {
             compare(common.aspectRatio, 1.0, "aspectRatio")
             compare(common.horizontalAspectRatio, 1.0, "horizontalAspectRatio")
             compare(common.reflectivity, 1.0, "reflectivity")
+            waitForRendering(top)
+         }
+    }
+
+    TestCase {
+        name: "Scatter3D Common Initialized"
+        when: windowShown
+
+        function test_1_common_initialized() {
+            if (Qt.platform.os === "android")
+                return;
+
+            constructCommonInit()
+            if (common_init.shadowsSupported === false)
+                return;
+
+            compare(common_init.selectionMode, AbstractGraph3D.SelectionNone, "selectionMode")
+            tryCompare(common_init, "shadowQuality", AbstractGraph3D.ShadowQualityLow)
+            compare(common_init.msaaSamples, 2, "msaaSamples")
+            compare(common_init.theme.type, Theme3D.ThemeUserDefined, "theme")
+            compare(common_init.renderingMode, AbstractGraph3D.RenderIndirect, "renderingMode")
+            compare(common_init.measureFps, true, "measureFps")
+            compare(common_init.customItemList.length, 0, "customItemList")
+            compare(common_init.orthoProjection, false, "orthoProjection")
+            compare(common_init.aspectRatio, 3.0, "aspectRatio")
+            compare(common_init.optimizationHints, AbstractGraph3D.OptimizationStatic, "optimizationHints")
+            compare(common_init.polar, false, "polar")
+            compare(common_init.radialLabelOffset, 2, "radialLabelOffset")
+            compare(common_init.horizontalAspectRatio, 0.2, "horizontalAspectRatio")
+            compare(common_init.reflection, true, "reflection")
+            compare(common_init.reflectivity, 0.1, "reflectivity")
+            compare(common_init.locale, Qt.locale("UK"), "locale")
+            compare(common_init.margin, 0.2, "margin")
             waitForRendering(top)
         }
     }
